Bug 333874 - cannot build ffox against xulrunner due to xpcom_obsolete dependency, patch by Pawl Chmielowski <prefiks@aviary.pl>, r=me